<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_CriarSwot"
    android:background="@drawable/telas_background"
    >
    <View
        android:id="@+id/toposwot"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:background="@drawable/topomont"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="S"
        android:textSize="50sp"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@id/barforca"
        app:layout_constraintStart_toStartOf="@id/barforca"
        />
    
    <EditText
        android:id="@+id/barforca"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:background="@drawable/bartext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toposwot"
        app:layout_constraintEnd_toStartOf="@+id/barfraqueza"
        app:layout_constraintBottom_toTopOf="@+id/baroportunidade"
        android:hint="@string/swotforca"
        android:textSize="9sp"
        android:gravity="start|top"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="O"
        android:textSize="50sp"
        android:textColor="#ffffff"
        app:layout_constraintStart_toStartOf="@+id/baroportunidade"
        app:layout_constraintBottom_toTopOf="@+id/baroportunidade"

        />

    <EditText
        android:id="@+id/baroportunidade"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:background="@drawable/bartext"
        app:layout_constraintBottom_toTopOf="@+id/btnconcluirswot"
        app:layout_constraintEnd_toEndOf="@+id/barforca"
        app:layout_constraintStart_toStartOf="@id/barforca"
        app:layout_constraintTop_toBottomOf="@+id/barforca"
        android:hint="@string/swotoportunidades"
        android:textSize="9sp"
        android:gravity="start|top"
        android:padding="3dp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="T"
        android:textSize="50sp"
        android:textColor="#ffffff"
        app:layout_constraintStart_toStartOf="@+id/barameacas"
        app:layout_constraintBottom_toTopOf="@+id/barameacas"
        />

    <EditText
        android:id="@+id/barameacas"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:background="@drawable/bartext"
        app:layout_constraintStart_toStartOf="@+id/barfraqueza"
        app:layout_constraintTop_toBottomOf="@+id/barfraqueza"
        app:layout_constraintEnd_toEndOf="@id/barfraqueza"
        app:layout_constraintBottom_toTopOf="@+id/btnconcluirswot"
        android:hint="@string/swotameaças"
        android:textSize="9sp"
        android:padding="3dp"
        android:gravity="start|top"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/barfraqueza"
        app:layout_constraintBottom_toTopOf="@+id/barfraqueza"
        android:text="W"
        android:textSize="50sp"
        android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/barfraqueza"
        android:layout_width="150dp"
        android:layout_height="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barforca"
        app:layout_constraintTop_toBottomOf="@+id/toposwot"
        android:background="@drawable/bartext"
        app:layout_constraintBottom_toTopOf="@+id/barameacas"
        android:hint="@string/swotfraqueza"
        android:textSize="9sp"
        android:gravity="start|top"
        />


<Button
    android:id="@+id/btnconcluirswot"
    android:layout_width="150dp"
    android:layout_height="40dp"
    android:background="@drawable/botaoshape"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/barameacas"
    android:text="@string/concluir"
    android:textColor="#ffffff"

    />
</androidx.constraintlayout.widget.ConstraintLayout>