<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.imcub.imcubApp.Activity_RecuperarConta"
    android:background="@drawable/telas_background"
    >


    <View
        android:id="@+id/topoRec"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:background="@drawable/topomont"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/iconRecuperarConta"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_padlock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topoRec" />

    <TextView
        android:id="@+id/txtlinkRecuperarConta"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/aileron_light"
        android:text="@string/linkRec"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/barEmailRecuperarConta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconRecuperarConta" />

    <EditText
        android:id="@+id/barEmailRecuperarConta"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:minHeight="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bartext"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/aileron_light"
        android:hint="@string/email_imcub_com_br"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="#8800ee"
        android:textColorHint="#9977ff"
        android:drawableTint="#8800ee"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnEnviarRecuperarConta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/txtlinkRecuperarConta" />

    <Button
        android:id="@+id/btnEnviarRecuperarConta"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:minHeight="48dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/botaoshape"
        android:fontFamily="@font/aileron_bold"
        android:text="@string/enviar"
        android:textColor="#ffffff"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barEmailRecuperarConta" />

</androidx.constraintlayout.widget.ConstraintLayout>