<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.imcub.imcubApp.Activity_Item_View"
    android:background="@android:color/white"
    android:padding="10dp"


    >


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgPerfilItemView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btnredondo"
        tools:ignore="ContentDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/usernameItemView"
        app:layout_constraintBottom_toTopOf="@+id/imgIdeiaItemView"
        />

    <TextView
        android:id="@+id/usernameItemView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/aileron_light"
        android:text="@string/usuario"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/cidadeItemView"
        app:layout_constraintEnd_toStartOf="@id/timeItemView"
        app:layout_constraintStart_toEndOf="@id/imgPerfilItemView"

        app:layout_constraintTop_toTopOf="@id/imgPerfilItemView" />

    <TextView
        android:textColor="#bbbbbb"
        android:id="@+id/cidadeItemView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cidade_uf"
        app:layout_constraintStart_toStartOf="@id/usernameItemView"
        app:layout_constraintTop_toBottomOf="@id/usernameItemView"
        app:layout_constraintEnd_toEndOf="@+id/usernameItemView"
        />

    <TextView
        android:id="@+id/timeItemView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#888888"
        android:textSize="18sp"
        tools:text="há 0 dias"
        app:layout_constraintStart_toEndOf="@id/usernameItemView"
        app:layout_constraintTop_toTopOf="@id/usernameItemView"
        app:layout_constraintEnd_toEndOf="@id/imgIdeiaItemView"
        app:layout_constraintBottom_toBottomOf="@+id/usernameItemView"
        android:layout_marginStart="150dp"
        />


    <ImageView
        android:id="@+id/imgIdeiaItemView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#888888"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/imgPerfilItemView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/txtTitleItemView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/aileron_bold"
        android:text="@string/titulo"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnLikeItemView"
        app:layout_constraintStart_toStartOf="@+id/imgIdeiaItemView"

        app:layout_constraintTop_toBottomOf="@+id/imgIdeiaItemView" />

    <ImageButton
        android:id="@+id/btnLikeItemView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:src="@drawable/ic_favorite_black_24dp"
        android:tint="#888888"
        app:layout_constraintStart_toEndOf="@+id/txtTitleItemView"
        app:layout_constraintEnd_toStartOf="@+id/btnSaveItemVIew"
        app:layout_constraintTop_toTopOf="@+id/txtTitleItemView"
        app:layout_constraintBottom_toBottomOf="@+id/txtTitleItemView"
        android:layout_marginStart="100dp"
        />

    <ImageButton
        android:id="@+id/btnSaveItemVIew"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@android:color/white"
        android:src="@drawable/ic_save_black_24dp"
        app:layout_constraintStart_toEndOf="@+id/btnLikeItemView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnLikeItemView"
        app:layout_constraintBottom_toBottomOf="@+id/btnLikeItemView"
        android:tint="#888888"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="15dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@+id/btnSaveItemVIew"
        android:background="#889900ff"
        />

</androidx.constraintlayout.widget.ConstraintLayout>